docs: write 10 detailed deep-dive articles following hashmap-deep-dive style
Replace 19-line placeholder docs with 500-700 line production-grade deep-dives:

1. ConcurrentHashMap — bin-level lock, CAS putVal, CounterCell, weakly consistent iterator
2. Garbage Collection — GC roots, generational hypothesis, G1/ZGC, tuning flags
3. volatile/synchronized/Atomic — memory barriers, lock escalation, CAS spin, ABA
4. Virtual Threads — continuations, carrier thread, pinning, structured concurrency
5. Stream API — Spliterator, lazy pipeline, parallel ForkJoin, collector internals
6. Generics & Type Erasure — bridge methods, PECS, heap pollution, super type tokens
7. CompletableFuture — async composition, execution thread, allOf/anyOf, timeout
8. JVM Architecture — ClassLoader, bytecode, JIT C1/C2, inlining, deoptimization
9. Spring Bean Lifecycle — BPP, AOP proxy, circular dependency 3-level cache, scopes
10. Connection Pool (HikariCP) — ConcurrentBag, pool sizing, leak detection, metrics

Each article follows consistent structure:
- Production story opening (real-world motivating scenario)
- 12-15 H2 sections with deep technical content
- Mermaid diagrams for architecture/flow visualization
- Benchmark tables with concrete numbers
- Anti-patterns section with solutions
- Cheat sheet closing with 5 core principles

All content in Vietnamese (except code/technical terms).
Build verified: npm run build passes successfully.

Co-Authored-By: Hiệp Bá <vanhiep99w@gmail.com>